--- a/app/21card/views/cardpoollist.html
+++ b/app/21card/views/cardpoollist.html
@@ -33,7 +33,7 @@
 	    	<tr ng-repeat = "cardpool in cardpoollists">
 	        <td class="col-md-2 text-center">{{cardpool.pool_code}}</td>
 	        <td class="col-md-2 text-center">{{cardpool.pool_name}}</td>
-	        <td class="col-md-2 text-center">{{cardpool.pool_type}}</td>
+	        <td class="col-md-2 text-center">{{cardpool.pool_type_name}}</td>
 	        <td class="col-md-2 text-center">
 	        	<button type="button" class="btn btn-default btn-xs" ng-click="resivepoolinfo(cardpool.pool_code)">修改</button>
 	        </td>
