--- a/app/21card/views/relief.html
+++ b/app/21card/views/relief.html
@@ -12,14 +12,14 @@
                    ng-model="cardinfo.cardnum">
               
               <label class="col-md-1 col-md-offset-1 radio-inline ">
-              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.status">号段</label>
+              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="3" ng-model="cardinfo.status">号段</label>
               <input type="text" class="col-md-2 form-control" id="inputLottry" placeholder="起始卡号"
                    ng-model="cardinfo.startnum">
                    <input type="text" class="col-md-2 form-control" id="inputLottry" placeholder="结束卡号"
                    ng-model="cardinfo.endnum">
 
               <label class="col-md-1 col-md-offset-1 radio-inline ">
-              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="3" ng-model="cardinfo.status">全部</label>
+              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.status">全部</label>
               
               
               
@@ -31,6 +31,27 @@
         </div>
     </div>
 </div><!-- searchArea -->
+
+<div class="form-group">
+<div class="col-md-4 col-md-offset-1 panel panel-default table-responsive">
+     <table ng-click="getlist()" class="table table-bordered">
+	    <thead>
+	      <tr>
+	        <th class="col-md-2 text-center">起始卡号</th>
+	        <th class="col-md-2 text-center">结束卡号</th>
+	        
+	      </tr>
+	    </thead>
+	    <tbody>
+	     <tr ng-repeat = "cardinfo in cardinfos">
+	       <td class="col-md-2 text-center">{{cardinfo.mincard}}</td>
+	       <td class="col-md-2 text-center">{{cardinfo.maxcard}}</td>
+	     </tr>
+	    </tbody>
+	 </table>
+</div><!-- 可用卡 -->
+
+
 
 
 </form>
