--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -320,6 +320,26 @@
 					    </div>
 				  	</div>
 
+				  	<div class="form-group">
+					    <label class="col-xs-3 control-label">是否实名制</label>
+					    <div class="col-xs-9">
+					    	<label class="radio-inline">
+							  <input type="radio" name="user_status" value="0"
+							  ng-model="saleobj.user_status"
+							  > 实名制
+							</label>
+							<label class="radio-inline">
+							  <input type="radio" name="user_status" value="8"
+							  ng-model="saleobj.user_status"
+							  > 不实名制
+							</label>
+					    </div>
+					    <!-- <div class="col-xs-7">
+					      <p class="form-control-static text-danger" >
+					      该选项请慎重使用，如果选择’不出票‘该销售品将不会出票也不发短信！</p>
+					    </div> -->
+				  	</div>
+
 
 				  	<div class="form-group">
 						<label class="col-xs-3 control-label">团产品-预定须知</label>
