--- a/app/07product/views/tkttypemodel.html
+++ b/app/07product/views/tkttypemodel.html
@@ -31,7 +31,11 @@
 	<div class="form-group" ng-show="placeid !== ''">
 		<label class="col-xs-2 control-label">所属景区</label>
 		<div class="col-xs-6">
-			<p class="form-control-static">{{objt.placename}} [{{objt.placecode}}]</p>
+			<p class="form-control-static">{{objt.placename}} 
+			<!-- <span ng-show="objt.placecode != null">[</span> -->
+			[{{objt.placecode}}]
+			<!-- <span ng-show="objt.placecode != null">]</span> -->
+			</p>
 		</div>
 	</div>
 
@@ -40,14 +44,14 @@
 	    <div class="col-sm-10">
 
 		    <p class="input-group col-sm-3 pull-left">
-	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
+	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="objt.start_date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
 	          <span class="input-group-btn">
 	            <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
 	          </span>
 	        </p>
 	        <p class="form-control-static pull-left"> &nbsp;&nbsp;-&nbsp;&nbsp; </p>
 	        <p class="input-group col-sm-3 pull-left">
-	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.end.date" is-open="section.end.opened" ng-required="true" close-text="Close" readonly/>
+	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="objt.end_date" is-open="section.end.opened" ng-required="true" close-text="Close" readonly/>
 	          <span class="input-group-btn">
 	            <button type="button" class="btn btn-default" ng-click="open(section.end)"><i class="glyphicon glyphicon-calendar"></i></button>
 	          </span>
