--- a/app/07product/views/tkttypemodel.html
+++ b/app/07product/views/tkttypemodel.html
@@ -44,14 +44,14 @@
 	    <div class="col-sm-10">
 
 		    <p class="input-group col-sm-3 pull-left">
-	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="objt.start_date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
+	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="midstart" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
 	          <span class="input-group-btn">
 	            <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
 	          </span>
 	        </p>
 	        <p class="form-control-static pull-left"> &nbsp;&nbsp;-&nbsp;&nbsp; </p>
 	        <p class="input-group col-sm-3 pull-left">
-	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="objt.end_date" is-open="section.end.opened" ng-required="true" close-text="Close" readonly/>
+	          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="midend" is-open="section.end.opened" ng-required="true" close-text="Close" readonly/>
 	          <span class="input-group-btn">
 	            <button type="button" class="btn btn-default" ng-click="open(section.end)"><i class="glyphicon glyphicon-calendar"></i></button>
 	          </span>
