--- a/app/14statistics/views/distributor.html
+++ b/app/14statistics/views/distributor.html
@@ -67,7 +67,7 @@
           </td>
           <td class="text-center">
             购买：{{price.total_buy * 0.01 | currency : '￥'}}, 
-            使用：{{price.total_back * 0.01 | currency : '￥'}}
+            退票：{{price.total_back * 0.01 | currency : '￥'}}
           </td>
         </tr>
       </tbody>
