--- a/app/21card/views/cardorderlist.html
+++ b/app/21card/views/cardorderlist.html
@@ -43,7 +43,7 @@
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
 
-                  <button type="button" class="btn btn-default search pull-right" ng-click="load()">立即搜索</button>
+                  <button type="button" class="btn btn-default search pull-right" ng-click="searchinfo()">立即搜索</button>
 
               </div>   
 
