--- a/app/21card/views/addcardpool.html
+++ b/app/21card/views/addcardpool.html
@@ -1,38 +1,39 @@
-<form class="form-horizontal" role="form">
-  <h2>添加/修改卡池基本信息</h2>
-  <div class="col-md-12">
-  <div class="panel panel-default">
-    <div class="panel-body">
-        <div class="form-group form-inline">
-            <div class="col-md-12">
-              
-              <label for="inputLottry" class="col-md-2 control-label">卡池名称</label>
-              <input type="text" class="col-md-4 form-control" id="inputLottry" placeholder="卡池名称"
-                   ng-model="cardinfo.pool_name">
-              
-              <label for="inputDate" class="col-md-2 control-label">卡池类型</label>
-              <div class="col-md-2">
-               <select class="form-control" ng-model="cardinfo.pool_type">
-               <option value="0">普通卡</option>
-               <option value="1">金卡</option>
-               </select>  
-              </div>
-              
-              
-              
-                  
-               <button type="button" class="btn btn-default search pull-right" ng-click="savecardpool()">确定</button>
+<div class="col-xs-12" >
+<div class="panel panel-success">
+  <div class="panel-heading text-center">添加卡池</div>
 
+<div class="panel-body">
+    <div class="container-fluid form-horizontal ">
 
-            </div>
-        </div>
+<div class="col-xs-10 col-xs-offset-0 form-horizontal" >
+	<div class="form-group">
+		<label class="col-xs-3 control-label">卡池名称</label>
+		<div class="col-xs-9">
+			<input type="text" class="form-control" 
+			ng-model="cardinfo.pool_name"
+			>
+		</div>
+	</div>
+
+	<div class="form-group">
+	<label class="col-xs-3 control-label">卡池类型</label>
+	  <div class="col-xs-9">
+         <select class="form-control" ng-model="cardinfo.pool_type">
+            <option value="0">普通卡</option>
+            <option value="1">金卡</option>
+          <select>
+      </div>  
     </div>
-   </div><!-- searchArea -->
+
+    <button type="button" class="btn btn-default search pull-right" ng-click="savecardpool()">添加卡池</button>
+	
+</div>
+
+</div>
+</div>
+</div>
 
 
 
 
-  
 
-  
- </form>
