--- a/app/21card/views/cardcomplete.html
+++ b/app/21card/views/cardcomplete.html
@@ -1,22 +1,35 @@
-<form class="form-horizontal" role="form">
-<h2>更改制作状态</h2>
+<div class="col-xs-12 col-xs-offset-0" >
+ <div class="panel panel-success">
+ <div class="panel-heading text-center">更改制作状态</div>
+ <div class="panel-body">
+    <div class="container-fluid form-horizontal ">
 
-<div class="col-md-12">
-<div class="panel panel-default">
-    <div class="panel-body">
-        <div class="form-group form-inline">
-            <div class="col-md-12">
-              <label for="inputLottry" class="col-md-offset-1 control-label">号段</label>
-              <input type="text" class="form-control" id="inputLottry" placeholder="起始卡号"ng-model="card.scard">
-               <input type="text" class="form-control" id="inputLottry" placeholder="结束卡号"ng-model="card.ecard">
-               <label for="inputLottry" class="col-md-offset-1 control-label">数量</label>
-              <p type="text" class="form-control" id="inputLottry" placeholder="数量"
-                   ng-model="card.sumcard" >{{card.ecard - card.scard + 1}} </p>
-            </div>
-        </div>
+<div class="col-xs-12 form-horizontal" >
+  <div class="form-group">
+    <label for="inputLottry" class="col-md-1 control-label">号段：</label>
+    <div class="col-xs-3">
+	 <input type="text" class="form-control" placeholder="起始卡号"
+			ng-model="card.scard">
     </div>
-</div><!-- searchArea -->
-  
+	<div class="col-xs-3">
+	 <input type="text" class="form-control" placeholder="结束卡号"
+			ng-model="card.ecard">
+	</div>
+	<label for="inputLottry" class="col-md-3 control-label">数量</label>
+	<div class="col-xs-2">
+	 <p id="disabledInput" type="text" class="form-control" id="inputLottry" placeholder="数量" disabled ng-model="cardinfo.sumcard">{{card.ecard - card.scard + 1}} 
+	 </p>
+	</div>       
+  </div>
+</div>
+
+</div>
+</div>
+</div>
+</div>
+
+
+<form class="form-horizontal" role="form">
 <div class="col-md-12">
 <div class="panel panel-default">
     <div class="panel-body">
@@ -31,14 +44,9 @@
               <label class="col-md-1 col-md-offset-1 radio-inline ">
               <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.cardstatu">卡段</label>
               </div>
-              <input type="text" class="form-control" id="inputLottry" placeholder="起始卡号"
-                   ng-model="cardinfo.startcard">
-              <input type="text" class="form-control" id="inputLottry" placeholder="结束卡号"
-                   ng-model="cardinfo.endcard">
-
-
-                  
-                  <button type="button" class="btn btn-default search pull-right" ng-click="change()">确定更改</button>
+              <input type="text" class="form-control" id="inputLottry" placeholder="起始卡号"ng-model="cardinfo.startcard">
+              <input type="text" class="form-control" id="inputLottry" placeholder="结束卡号"ng-model="cardinfo.endcard">
+              <button type="button" class="btn btn-default search pull-right" ng-click="change()">制作完成</button>
 
 
             </div>
