--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -141,18 +141,23 @@
   	</div>
 
   	<div class="form-group form-inline">
-	    <label class="col-xs-3 control-label">红包  </label>
+	    <label class="col-xs-3 control-label">红包</label>
+	    <div class="col-xs-9 form-inline">
 	    <label class="radio-inline">
-		 <input type="radio" name="rebate_type" value="1"
-			  ng-model="obj.rebate_type"
-			  >是</label>
-	    
-	    <input type="text" class="form-control" ng-model="obj.rebate_start">
-        <input type="text" class="form-control" ng-model="obj.rebate_end">
-        <label class="radio-inline">
 		 <input type="radio" name="rebate_type" value="0"
 			  ng-model="obj.rebate_type"
-			  >否</label>   
+			  >否</label>
+
+	    <label class="radio-inline">
+		<input type="radio" name="rebate_type" value="1"
+			  ng-model="obj.rebate_type"
+			  >是</label>
+	   
+	    <input type="text" class="form-control" placeholder = "最小金额" ng-model="obj.rebate_start" style="width:90px;">--	
+	    <input type="text" class="form-control" placeholder = "最大金额" ng-model="obj.rebate_end" style="width:90px;">
+
+        
+	    </div>   
   	</div>
 
 	<div class="form-group">
