--- a/app/21card/views/reviseinfo.html
+++ b/app/21card/views/reviseinfo.html
@@ -1,14 +1,35 @@
-<form class="form-horizontal" role="form">
- <h2>修改卡信息</h2>
- 
- <div class="form-group">
-    <label for="inputLottry" class="col-sm-2 control-label">卡号</label>
-    <div class="col-md-4">
-      <input type="text" class="form-control" id="inputLottry" placeholder="** ** ** ** ** ** **"
-      ng-model=""
-      >
-    </div>
+<div class="col-xs-12 col-xs-offset-0" >
+ <div class="panel panel-success">
+ <div class="panel-heading text-center">修改卡池信息</div>
+ <div class="panel-body">
+    <div class="container-fluid form-horizontal ">
+
+<div class="col-xs-12 form-horizontal" >
+  <div class="form-group">
+		<label class="col-xs-2 control-label">卡池名称</label>
+		<div class="col-xs-2">
+			<input type="text" class="form-control" placeholder="卡池名称"
+			ng-model="cardinfo.pool_name" style="width:200px">
+		</div>
+		<label for="inputDate" class="col-md-2 control-label">卡池类型</label>
+		<div class="col-md-2">
+            <select class="form-control" ng-model="cardinfo.pool_type">
+               <option value="0">普通卡</option>
+               <option value="1">金卡</option>
+            <select>  
+        </div>
+        <button type="button" class="btn btn-default col-xs-offset-1" ng-click="savecardpool()" style="width:200px;">修改<button>
+         
   </div>
+</div>
+
+</div>
+</div>
+</div>
 
 
- </form>
+
+
+
+
+</div>
