--- a/app/style/app.css
+++ b/app/style/app.css
@@ -333,7 +333,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 50px;
+  /*padding-top: 50px;*/
 }
 
 
