--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -161,7 +161,50 @@
 						</div>
 					</div>
 
-					<div class="form-group">
+						<div class="form-group">
+							<form class="form-inline">
+							<label class="col-xs-3 control-label">有效期</label>&nbsp;&nbsp;
+		                  	<div class="input-group">
+			                  	<input 	type="text" 
+			                  			class="form-control"
+			                  			ng-model="start_time"
+			                  			uib-datepicker-popup="yyyy-MM-dd" 
+			                  			is-open="section.start.opened" 
+			                  			ng-required="true" 
+			                  			close-text="Close" 
+			                  			readonly/>
+			                    <span 	class="input-group-btn">
+			                        <button type="button" 
+			                        		class="btn btn-default"
+			                        		ng-click="open(section.start)">
+			                        	<i class="glyphicon glyphicon-calendar"></i>
+			                        </button>
+			                    </span>
+		                  	</div>
+	                        &nbsp;&nbsp;至&nbsp;&nbsp;            
+		                  	<div class="input-group">
+		                  		<input 	type="text" 
+		                  				class="form-control"
+		                  				ng-model="end_time"
+		                  				uib-datepicker-popup="yyyy-MM-dd" 
+			                  			is-open="section.end.opened" 
+			                  			ng-required="true" 
+			                  			close-text="Close" 
+			                  			readonly/>
+		                      	<span class="input-group-btn">
+		                        	<button type="button" 
+		                        			class="btn btn-default" 
+		                        			ng-click="open(section.end)">
+		                        		<i class="glyphicon glyphicon-calendar"></i>
+		                        	</button>
+		                      </span>
+	                  		</div>
+	                  		</form>
+	                  		&nbsp;&nbsp;&nbsp;&nbsp;
+						</div>
+					
+
+					<div class="form-group mt10">
 					    <label class="col-xs-3 control-label">产品所属</label>
 					    <div class="col-xs-9" >
 							<select class="form-control" ng-model="saleobj.sale_belong" 
