--- a/app/13order/views/orderticketlist.html
+++ b/app/13order/views/orderticketlist.html
@@ -78,12 +78,15 @@
                 
                 </td> -->
                 <td>
-                  <button type="button" 
-                          class="btn btn-primary" 
-                          ng-click="mosaic(obj.id,obj.take_effect_time,obj.otime)" 
-                          ng-disabled="authority">
-                    修改
-                  </button>
+                <div>
+                    <button type="button text-center" 
+                        class="btn btn-primary"
+                        ng-click="mosaic(obj.id,obj.take_effect_time,obj.otime)" 
+                        ng-disabled="authority">
+                        修改
+                    </button>
+                </div>
+                  
                 </td>
 
               </tr>
